--- a/Develop/style.css
+++ b/Develop/style.css
@@ -4,65 +4,100 @@ body {
   line-height: 1;
 }
 
-textarea {
-  background: transparent;
-  border: none;
-  resize: none;
-  color: #000000;
-  border-left: 1px solid black;
-  padding: 10px;
-}
-
+/* Jumbotron display */
 .jumbotron {
   text-align: center;
   background-color: transparent;
   color: black;
   border-radius: 0;
-  /* border-bottom: 10px solid black; */
+  padding-bottom: 20px;
+  margin-bottom: 0;
 }
 
-.description {
-  white-space: pre-wrap;
+/* Main container for content */
+.container {
+  margin-bottom: 50px;
+  border: solid 1px rgb(228, 227, 227);
+  border-bottom: solid 1px rgb(228, 227, 227);
 }
 
+/* Date box to display current time and date */
+.date {
+  text-align: center;
+  padding-top: 30px;
+  padding-bottom: 0;
+  background-color: rgb(129, 170, 210);
+  color: white;
+}
+
+/* Current time and day style */
+#currentDay {
+  font-weight: 800;
+  text-transform: uppercase;
+}
+
+/* Time for each hour style */
 .time-block {
   text-align: center;
   border-radius: 15px;
+  padding: 0;
 }
 
+/* Text area for calendar entry */
+textarea {
+  background: transparent;
+  border: none;
+  resize: none;
+  color: #000000;
+  border-left: 1px solid rgb(228, 227, 227);
+  padding: 10px;
+  width: 100%;
+  height: 100%;
+  top: 0;
+}
+
+/* Row styles */
 .row {
-  white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid white;
+  border-top: 1px solid rgb(228, 227, 227);
 }
 
+/* Side hour styles */
 .hour {
   background-color: #ffffff;
   color: #000000;
-  border-top: 1px dashed #000000;
+  text-align: center;
+  padding: 10px;
+  padding-top: 30px;
+  font-weight: 800;
 }
 
+/* Past, present, future background color changes */
 .past {
-  background-color: #d3d3d3;
-  color: white;
+  background-color: rgb(250, 249, 249);
+  color: #000000;
 }
 
 .present {
-  background-color: #ff6961;
-  color: white;
+  background-color: #e4e66c;
+  color: #000000;
 }
 
 .future {
-  background-color: #77dd77;
-  color: white;
+  background-color: #7aed7a;
+  color: #000000;
 }
 
+/* Save button styles */
 .saveBtn {
-  border-left: 1px solid black;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-  background-color: #06aed5;
+  border: none;
+  background-color: rgb(129, 170, 210);
+  box-shadow: 1px 1px 1px rgb(104, 104, 104);
   color: white;
+  padding: 0;
+  height: 50px;
+  width: 25px;
+  margin-top: 15px;
 }
 
 .saveBtn i:hover {
