--- a/Develop/style.css
+++ b/Develop/style.css
@@ -4,24 +4,12 @@ body {
   line-height: 1;
 }
 
-/* Jumbotron display */
-.jumbotron {
-  text-align: center;
-  background-color: transparent;
-  color: black;
-  border-radius: 0;
-  padding-bottom: 20px;
-  margin-bottom: 0;
-}
-
-/* Main container for content */
 .container {
   margin-bottom: 50px;
   border: solid 1px rgb(228, 227, 227);
   border-bottom: solid 1px rgb(228, 227, 227);
 }
 
-/* Date box to display current time and date */
 .date {
   text-align: center;
   padding-top: 30px;
@@ -30,20 +18,6 @@ body {
   color: white;
 }
 
-/* Current time and day style */
-#currentDay {
-  font-weight: 800;
-  text-transform: uppercase;
-}
-
-/* Time for each hour style */
-.time-block {
-  text-align: center;
-  border-radius: 15px;
-  padding: 0;
-}
-
-/* Text area for calendar entry */
 textarea {
   background: transparent;
   border: none;
@@ -56,13 +30,32 @@ textarea {
   top: 0;
 }
 
-/* Row styles */
+
+.jumbotron {
+  text-align: center;
+  background-color: transparent;
+  color: black;
+  border-radius: 0;
+  padding-bottom: 20px;
+  margin-bottom: 0;
+}
+
+#currentDay {
+  font-weight: 800;
+  text-transform: uppercase;
+}
+
+.time-block {
+  text-align: center;
+  border-radius: 15px;
+  padding: 0;
+}
+
 .row {
   height: 80px;
   border-top: 1px solid rgb(228, 227, 227);
 }
 
-/* Side hour styles */
 .hour {
   background-color: #ffffff;
   color: #000000;
@@ -72,7 +65,6 @@ textarea {
   font-weight: 800;
 }
 
-/* Past, present, future background color changes */
 .past {
   background-color: rgb(250, 249, 249);
   color: #000000;
@@ -88,8 +80,7 @@ textarea {
   color: #000000;
 }
 
-/* Save button styles */
-.saveBtn {
+.btn {
   border: none;
   background-color: rgb(129, 170, 210);
   box-shadow: 1px 1px 1px rgb(104, 104, 104);
@@ -100,7 +91,7 @@ textarea {
   margin-top: 15px;
 }
 
-.saveBtn i:hover {
+.btn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
 }
